added block banner-foto

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
       <div class="content">
         <div class="content__container">
-          <section class="first__page-news">
+          <article class="first__page-news">
             <div class="page-news__items">
               <div class="page-news__item news-cards-with-foto">
                   <div class="news-cards-with-foto item-card-with-foto">
@@ -151,7 +151,14 @@
                      </div>
                   </div>
             </div>
-          </section>
+         </article>
+         <div class="banner__foto foto-banner">
+            <div class="foto-banner__img">
+               <a href="#" class="foto-banner__link">
+                  <img src="/images/content/foto/banner1.jpg" alt="foto-banner">
+               </a>
+            </div>
+         </div>
         </div>
       </div>
       
