adjusted the second block

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="content">
         <div class="content__container">
           <article class="first__page-news">
-            <div class="page-news__items">
+            <div class=" first-page__news-items">
               <div class="page-news__item news-cards-with-foto">
                   <div class="news-cards-with-foto item-card-with-foto">
                      <div class="item-card-with-foto__image">
@@ -159,6 +159,50 @@
                </a>
             </div>
          </div>
+         <article class="second-page">
+          <div class="second-page__video card-video">
+            <div class="card-video__video-file">
+              <iframe src="https://www.youtube.com/embed/C5q0ULg0nmY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="card-video__video-info">
+              <div class="card-video__title title-big-card">Вінницькі зубри вдруге стали зірками соцмереж</div>
+              <div class="card-video__date date-item-card">10.02.2022, 09:46</div> 
+            </div>
+          </div>
+          <div class="second-page__cards news-cards-with-foto">
+            <div class="item-card-with-foto">
+              <div class="item-card-with-foto__image">
+                <img src="/images/content/second-page/01.jpg" alt="foto">
+             </div>
+             <div class="item-card-with-foto__content">
+                <h2 class="item-card-with-foto__title title-card-with-foto">Через автопригоду перекривали рух трамваїв у Вінниці. Подробиці ранкової ДТП</h2>
+                <div class="item-card-with-foto__text text-card ">11 лютого, близько 10 ранку, на перехресті Хмельницького шосе та проспекту Юності у Вінниці, трапилась ДТП. Через автопригоду, на місці утворився затор. А трамваї, у напрямку Барського шосе, тимчасово припинили свій рух. Наразі, ситуація врегульована.</div>
+                <div class="item-card__date date-item-card">10.02.2022, 14:45</div>
+             </div>
+            </div>
+            <div class="item-card-with-foto">
+              <div class="item-card-with-foto__image">
+                <img src="/images/content/second-page/02.jpg" alt="foto">
+             </div>
+             <div class="item-card-with-foto__content">
+                <h2 class="item-card-with-foto__title title-card-with-foto">У Вінниці до кінця року відкриють спортзал для занять різними видами єдиноборств</h2>
+                <div class="item-card-with-foto__text text-card ">У Вінниці, по вулиці Келецька, готують приміщення, яке скоро стане тренувальним майданчиком для боксерів. Тут буде спеціальна зала для єдиноборств, ринг і тренажерний зал.</div>
+                <div class="item-card__date date-item-card">10.02.2022, 14:45</div>
+             </div>
+            </div>
+            <div class="item-card-with-foto">
+              <div class="item-card-with-foto__image">
+                <img src="/images/content/second-page/03.jpg" alt="foto">
+             </div>
+             <div class="item-card-with-foto__content">
+                <h2 class="item-card-with-foto__title title-card-with-foto">У колишньому магазині відкрили швейний цех:на Вінниччині родина взялась відроджувати бізнес на селі</h2>
+                <div class="item-card-with-foto__text text-card ">У Моївці Могилів-Подільського району, жителі взялися за непритаманний бізнес на селі. Родина Вівдичів шиють постільну білизну та банні рушники. А на роботу до себе взяли сусідську майстриню-самоучку.</div>
+                <div class="item-card__date date-item-card">10.02.2022, 14:45</div>
+             </div>
+            </div>
+        </div>
+         </article>
+          
         </div>
       </div>
       
