editing classes in the hat

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		<div class="wrapper">
 			<div class="header">
 				<div class="header__container">
-					<div class="header__top top-header">
-						<div class="top-header__icons icon-header">
-							<div class="icon-header__burger icon">
+					<div class="header header__top">
+						<div class="header__top-icons icons-header">
+							<div class="header__top-icon icon__burger">
 								<a href="#">
 									<img
 										src="/images/menu/burger.png"
@@ -33,7 +33,7 @@
 									/>
 								</a>
 							</div>
-							<div class="icon-header__search icon">
+							<div class="header__top-icon icon__search">
 								<a href="#">
 									<img
 										src="/images/menu/search.svg"
@@ -41,19 +41,21 @@
 									/>
 								</a>
 							</div>
-							<div class="icon-header__wether icon">
+							<div class="header__top-icon icon__weather">
 								<img
 									src="/images/menu/weather.png"
 									alt="weather"
 								/>
 							</div>
 						</div>
-						<h1 class="title">VinnitsaTimes</h1>
-						<div class="button">
+						<h1 class="header__top-title title-header">
+							VinnitsaTimes
+						</h1>
+						<div class="header__top-button button">
 							<a class="button" href="#">Оформити підписку</a>
 						</div>
 					</div>
-					<nav class="header__menu menu">
+					<nav class="header header__menu">
 						<div class="menu__items">
 							<div class="menu__item">
 								<a href="#" class="item">Місто</a>
@@ -304,7 +306,7 @@
 							</div>
 						</div>
 					</section>
-					<div class="banner__foto foto-banner">
+					<!--<div class="banner__foto foto-banner">
 						<div class="foto-banner__img">
 							<a
 								href="#"
@@ -564,7 +566,7 @@
 								</div>
 							</div>
 						</section>
-					</article>
+					</article>-->
 				</div>
 			</div>
 
