збереження перед роботою 29.10

--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
 			</div>
 			<div class="content">
 				<div class="content__container">
-					<section class="first__page-news">
-						<div class="first-page__news-items">
-							<div class="page-news__item news-cards-with-foto">
+					<section class="first-block">
+						<div class="first-block__items">
+							<div
+								class="item__first-block news-cards__with-photo"
+							>
 								<div
 									class="news-cards-with-foto item-card-with-foto"
 								>
